--- a/example/helloworld/index.html
+++ b/example/helloworld/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 
-<script src="../../src/installNamespace.js"></script>
-<script src="../../src/game/installGameNamespace.js"></script>
+<script src="../../src/app/installNamespace.js"></script>
+<script src="../../src/app/installGameNamespace.js"></script>
 
 <script src="../../src/utils/iterateEntries.js"></script>
 <script src="../../src/utils/iterateSomeEntries.js"></script>
@@ -37,9 +37,9 @@
 <script src="../../src/audio/bootstrap/installHtmlAudioSprite.js"></script>
 <script src="../../src/audio/bootstrap/installWebAudioSprite.js"></script>
 
-<script src="../../src/render/intern/motion/entity/LinePath.js"></script>
-<script src="../../src/render/intern/motion/entity/CirclePath.js"></script>
-<script src="../../src/render/intern/motion/entity/BezierCurvePath.js"></script>
+<script src="../../src/render/internal/motion/entity/LinePath.js"></script>
+<script src="../../src/render/internal/motion/entity/CirclePath.js"></script>
+<script src="../../src/render/internal/motion/entity/BezierCurvePath.js"></script>
 
 <script src="../../src/utils/Repository.js"></script>
 <script src="../../src/utils/KeyRepository.js"></script>
@@ -62,7 +62,7 @@
 <script src="../../src/scene/position/Width.js"></script>
 <script src="../../src/scene/position/Font.js"></script>
 
-<script src="../../src/render/intern/draw/entity/RectangleMask.js"></script>
+<script src="../../src/render/internal/draw/entity/RectangleMask.js"></script>
 
 <script src="../../src/scene/component/ScreenShaker.js"></script>
 <script src="../../src/scene/component/FixRezScreenShaker.js"></script>
@@ -87,64 +87,64 @@
 <script src="../../src/input/PointerHandler.js"></script>
 <script src="../../src/input/Taps.js"></script>
 
-<script src="../../src/render/intern/measureText.js"></script>
-<script src="../../src/render/intern/draw/entity/SubImage.js"></script>
-<script src="../../src/render/intern/draw/entity/ImageWrapper.js"></script>
-<script src="../../src/render/intern/draw/entity/TextWrapper.js"></script>
-<script src="../../src/render/intern/draw/entity/Rectangle.js"></script>
-<script src="../../src/render/intern/draw/entity/Quadrilateral.js"></script>
-<script src="../../src/render/intern/draw/entity/ABLine.js"></script>
-<script src="../../src/render/intern/draw/entity/Circle.js"></script>
-<script src="../../src/render/intern/draw/entity/EquilateralTriangle.js"></script>
-<script src="../../src/render/intern/draw/entity/Hexagon.js"></script>
-<script src="../../src/render/intern/draw/entity/DrawableLine.js"></script>
-<script src="../../src/render/intern/draw/entity/Drawable.js"></script>
-<script src="../../src/render/intern/draw/entity/Drawables.js"></script>
+<script src="../../src/render/internal/measureText.js"></script>
+<script src="../../src/render/internal/draw/entity/SubImage.js"></script>
+<script src="../../src/render/internal/draw/entity/ImageWrapper.js"></script>
+<script src="../../src/render/internal/draw/entity/TextWrapper.js"></script>
+<script src="../../src/render/internal/draw/entity/Rectangle.js"></script>
+<script src="../../src/render/internal/draw/entity/Quadrilateral.js"></script>
+<script src="../../src/render/internal/draw/entity/ABLine.js"></script>
+<script src="../../src/render/internal/draw/entity/Circle.js"></script>
+<script src="../../src/render/internal/draw/entity/EquilateralTriangle.js"></script>
+<script src="../../src/render/internal/draw/entity/Hexagon.js"></script>
+<script src="../../src/render/internal/draw/entity/DrawableLine.js"></script>
+<script src="../../src/render/internal/draw/entity/Drawable.js"></script>
+<script src="../../src/render/internal/draw/entity/Drawables.js"></script>
 
-<script src="../../src/render/intern/animation/entity/Animation.js"></script>
-<script src="../../src/render/intern/animation/entity/Animations.js"></script>
-<script src="../../src/render/intern/motion/entity/Paths.js"></script>
-<script src="../../src/render/intern/sprite/entity/Sprite.js"></script>
-<script src="../../src/render/intern/sprite/entity/Sprites.js"></script>
+<script src="../../src/render/internal/animation/entity/Animation.js"></script>
+<script src="../../src/render/internal/animation/entity/Animations.js"></script>
+<script src="../../src/render/internal/motion/entity/Paths.js"></script>
+<script src="../../src/render/internal/sprite/entity/Sprite.js"></script>
+<script src="../../src/render/internal/sprite/entity/Sprites.js"></script>
 
-<script src="../../src/render/intern/CanvasImageCollisionDetector.js"></script>
-<script src="../../src/render/intern/animation/BasicAnimations.js"></script>
-<script src="../../src/render/intern/animation/AnimationHelper.js"></script>
-<script src="../../src/render/intern/animation/AnimationTimer.js"></script>
-<script src="../../src/render/intern/animation/PropertyAnimations.js"></script>
-<script src="../../src/render/intern/audio/AudioAnimations.js"></script>
-<script src="../../src/render/intern/sprite/SpriteAnimations.js"></script>
-<script src="../../src/render/intern/sprite/SpriteTimer.js"></script>
+<script src="../../src/render/internal/CanvasImageCollisionDetector.js"></script>
+<script src="../../src/render/internal/animation/BasicAnimations.js"></script>
+<script src="../../src/render/internal/animation/AnimationHelper.js"></script>
+<script src="../../src/render/internal/animation/AnimationTimer.js"></script>
+<script src="../../src/render/internal/animation/PropertyAnimations.js"></script>
+<script src="../../src/render/internal/audio/AudioAnimations.js"></script>
+<script src="../../src/render/internal/sprite/SpriteAnimations.js"></script>
+<script src="../../src/render/internal/sprite/SpriteTimer.js"></script>
 <script src="../../src/utils/inheritMethods.js"></script>
-<script src="../../src/render/intern/motion/MotionHelper.js"></script>
-<script src="../../src/render/intern/motion/MotionTimer.js"></script>
-<script src="../../src/render/intern/motion/calcLinePoint.js"></script>
-<script src="../../src/render/intern/motion/calcCirclePoint.js"></script>
-<script src="../../src/render/intern/motion/calcBezierPoint.js"></script>
-<script src="../../src/render/intern/motion/Motions.js"></script>
+<script src="../../src/render/internal/motion/MotionHelper.js"></script>
+<script src="../../src/render/internal/motion/MotionTimer.js"></script>
+<script src="../../src/render/internal/motion/calcLinePoint.js"></script>
+<script src="../../src/render/internal/motion/calcCirclePoint.js"></script>
+<script src="../../src/render/internal/motion/calcBezierPoint.js"></script>
+<script src="../../src/render/internal/motion/Motions.js"></script>
 
-<script src="../../src/render/intern/draw/wrapText.js"></script>
-<script src="../../src/render/intern/draw/renderQuadrilateral.js"></script>
-<script src="../../src/render/intern/draw/renderABLine.js"></script>
-<script src="../../src/render/intern/draw/renderPolygon.js"></script>
-<script src="../../src/render/intern/draw/renderEqTriangle.js"></script>
-<script src="../../src/render/intern/draw/renderImage.js"></script>
-<script src="../../src/render/intern/draw/renderAtlas.js"></script>
-<script src="../../src/render/intern/draw/renderText.js"></script>
-<script src="../../src/render/intern/draw/renderEjectaText.js"></script>
-<script src="../../src/render/intern/draw/renderCircle.js"></script>
-<script src="../../src/render/intern/draw/renderCurve.js"></script>
-<script src="../../src/render/intern/draw/renderHexagon.js"></script>
-<script src="../../src/render/intern/draw/renderLine.js"></script>
-<script src="../../src/render/intern/draw/renderRectangle.js"></script>
-<script src="../../src/render/intern/draw/Renderer.js"></script>
-<script src="../../src/render/intern/CallbackTimer.js"></script>
+<script src="../../src/render/internal/draw/wrapText.js"></script>
+<script src="../../src/render/internal/draw/renderQuadrilateral.js"></script>
+<script src="../../src/render/internal/draw/renderABLine.js"></script>
+<script src="../../src/render/internal/draw/renderPolygon.js"></script>
+<script src="../../src/render/internal/draw/renderEqTriangle.js"></script>
+<script src="../../src/render/internal/draw/renderImage.js"></script>
+<script src="../../src/render/internal/draw/renderAtlas.js"></script>
+<script src="../../src/render/internal/draw/renderText.js"></script>
+<script src="../../src/render/internal/draw/renderEjectaText.js"></script>
+<script src="../../src/render/internal/draw/renderCircle.js"></script>
+<script src="../../src/render/internal/draw/renderCurve.js"></script>
+<script src="../../src/render/internal/draw/renderHexagon.js"></script>
+<script src="../../src/render/internal/draw/renderLine.js"></script>
+<script src="../../src/render/internal/draw/renderRectangle.js"></script>
+<script src="../../src/render/internal/draw/Renderer.js"></script>
+<script src="../../src/render/internal/CallbackTimer.js"></script>
 
 <script src="../../src/render/Stage.js"></script>
 
-<script src="../../src/render/intern/draw/entity/Setter.js"></script>
-<script src="../../src/render/intern/EntityServices.js"></script>
-<script src="../../src/render/NewStageAPI.js"></script>
+<script src="../../src/render/internal/draw/entity/Setter.js"></script>
+<script src="../../src/render/internal/EntityServices.js"></script>
+<script src="../../src/render/StageAPI.js"></script>
 
 <script src="../../src/render/ImageCache.js"></script>
 <script src="../../src/render/AtlasCache.js"></script>
@@ -169,7 +169,7 @@
 <script src="../../src/game/EqTriangleGridHelper.js"></script>
 <script src="../../src/game/EqTriangleViewHelper.js"></script>
 <script src="../../src/game/HexViewHelper.js"></script>
-<script src="../../src/game/Camera.js"></script>
+<script src="../../src/scene/component/Camera.js"></script>
 <script src="../../src/game/PlayerControls.js"></script>
 
 <script src="../../src/app/GameLoop.js"></script>
