--- a/example/helloworld/index.html
+++ b/example/helloworld/index.html
@@ -170,6 +170,7 @@
 <script src="../../src/game/grid/EqTriangleViewHelper.js"></script>
 <script src="../../src/game/grid/HexViewHelper.js"></script>
 <script src="../../src/scene/video/Camera.js"></script>
+<script src="../../src/input/Direction.js"></script>
 <script src="../../src/input/PlayerControls.js"></script>
 
 <script src="../../src/publicexposedinternals/app/GameLoop.js"></script>
