add color utils

--- a/example/helloworld/index.html
+++ b/example/helloworld/index.html
@@ -19,6 +19,7 @@
 <script src="../../src/utils/math/Vectors.js"></script>
 <script src="../../src/utils/math/EqTriangles.js"></script>
 <script src="../../src/utils/Strings.js"></script>
+<script src="../../src/utils/Colors.js"></script>
 <script src="../../src/utils/h5/CallbackCounter.js"></script>
 <script src="../../src/utils/polyfill/Promise.js"></script>
 <script src="../../src/utils/math/calcCantorPairing.js"></script>
