--- a/example/monkey-test_render_performance/index.html
+++ b/example/monkey-test_render_performance/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>monkey test</title>
+    <title>monkey test - set monkeys w/url params</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="stylesheet" href="app.css">
