add helper to resize canvas with standard 16:9 aspect ratio

--- a/example/helloworld/index.html
+++ b/example/helloworld/index.html
@@ -28,6 +28,7 @@
 <script src="../../src/platform/Stats.js"></script>
 <script src="../../src/publicexposedinternals/platform/getGamepads.js"></script>
 <script src="../../src/screen/getDevicePixelRatio.js"></script>
+<script src="../../src/screen/mapToWideScreen.js"></script>
 <script src="../../src/app/Event.js"></script>
 <script src="../../src/render/Transition.js"></script>
 
