--- a/example/showFPS/index.html
+++ b/example/showFPS/index.html
@@ -5,7 +5,7 @@
     <title>highfive.js app</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="app.css">
 </head>
 <body>
 
@@ -19,7 +19,6 @@
 <script src="../../src/utils/math/Vectors.js"></script>
 <script src="../../src/utils/math/EqTriangles.js"></script>
 <script src="../../src/utils/Strings.js"></script>
-<script src="../../src/utils/Colors.js"></script>
 <script src="../../src/utils/h5/CallbackCounter.js"></script>
 <script src="../../src/utils/polyfill/Promise.js"></script>
 <script src="../../src/utils/math/calcCantorPairing.js"></script>
@@ -213,11 +212,6 @@
 <script src="../../src/publicexposedinternals/app/EventBus.js"></script>
 <script src="../../src/publicexposedinternals/app/App.js"></script>
 <script src="../../src/app/Bootstrapper.js"></script>
-
-<!--my scenes start-->
-
-<script src="mygame/MyGameResources.js"></script>
-<script src="mygame/runMyScenes.js"></script>
 
 <!--main: app entry point & platform config-->
 <script src="main.js"></script>
