--- a/example/gamepad-scaled-radial-dead-zone/index.html
+++ b/example/gamepad-scaled-radial-dead-zone/index.html
@@ -62,6 +62,8 @@
 <script src="../../src/render/position/Width.js"></script>
 <script src="../../src/render/position/Font.js"></script>
 
+<script src="../../src/utils/h5/setupFPSMeter.js"></script>
+
 <script src="../../src/publicexposedinternals/render/internal/draw/entity/RectangleMask.js"></script>
 
 <script src="../../src/scene/video/ScreenShaker.js"></script>
