helper class for image buttons

--- a/example/helloworld/index.html
+++ b/example/helloworld/index.html
@@ -82,6 +82,7 @@
 <script src="../../src/input/isHit.js"></script>
 <script src="../../src/input/GamePadAxis.js"></script>
 <script src="../../src/input/GamePadButton.js"></script>
+<script src="../../src/input/Buttons.js"></script>
 <script src="../../src/publicexposedinternals/input/entity/GamePad.js"></script>
 <script src="../../src/input/Key.js"></script>
 <script src="../../src/publicexposedinternals/input/entity/WiiUGamePad.js"></script>
